--- a/SettingsComPort.json
+++ b/SettingsComPort.json
@@ -4,6 +4,7 @@
     "ReadTimeoutSec": 1,
     "Camera1": 0,
     "CameraBlank": 1,
-    "DisableCameraFeed": false,
-    "CameraRefreshT": 0.1
+    "DisableCameraFeed": true,
+    "CameraRefreshT": 0.1,
+    "Testing": true
 }
