Logging, reverse cam feed, dist display

--- a/SettingsComPort.json
+++ b/SettingsComPort.json
@@ -2,9 +2,10 @@
     "ComPort": "COM8",
     "Baudrate": 9600,
     "ReadTimeoutSec": 1,
-    "Camera1": 0,
-    "CameraBlank": 1,
-    "DisableCameraFeed": true,
+    "CameraFront": 0,
+    "CameraBack": 2,
+    "CameraBlank": 10,
+    "DisableCameraFeed": false,
     "CameraRefreshT": 0.1,
     "Testing": true
 }
